--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "debug": "~2.6.3",
     "express": "~4.15.2",
     "morgan": "~1.8.1",
+    "pug": "^2.0.1",
     "serve-favicon": "~2.4.2"
   }
 }
